[gd_scene load_steps=4 format=3 uid="uid://minigame_review"]

[ext_resource type="Script" path="res://scenes/ui/minigame_review.gd" id="1_review_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.95, 0.95, 1, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.4, 0.3, 0.8, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_size = 10
shadow_offset = Vector2(0, 5)
shadow_color = Color(0, 0, 0, 0.3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_example"]
bg_color = Color(0.85, 0.9, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.5, 0.6, 0.9, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="MinigameReview" type="CanvasLayer"]
layer = 100
script = ExtResource("1_review_script")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.1, 0.5, 1)
theme_override_font_sizes/font_size = 40
text = "Let's Review: Topic"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ExplanationLabel" type="RichTextLabel" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
theme_override_colors/default_color = Color(0.1, 0.1, 0.1, 1)
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "Explanation text will appear here."
fit_content = true
autowrap_mode = 3

[node name="ConceptsVBox" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ExamplePanel" type="PanelContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_example")

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ExamplePanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 15

[node name="ExampleLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ExamplePanel/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.1, 0.2, 0.5, 1)
theme_override_font_sizes/font_size = 22
text = "Example: Sample example text"
autowrap_mode = 3

[node name="TipPanel" type="PanelContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_example")

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/TipPanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 15

[node name="TipLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/TipPanel/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.1, 0.5, 0.2, 1)
theme_override_font_sizes/font_size = 22
text = "ðŸ’¡ Tip: Sample tip text"
autowrap_mode = 3

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ContinueButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 60)
layout_mode = 2
size_flags_horizontal = 4
disabled = true
theme_override_font_sizes/font_size = 28
text = "I'm Ready to Try Again!"
